/*
 * Message definitions for various statistics.
 *
 * Time is in seconds from 1970 epoch.
 */

syntax = "proto3";

package stats;

// Ping times from listed services.
message PingTimes {
    message ServicePing {
        string name = 1;
        string host = 2;
        string port = 3;
        bool online = 4;
        // Ping time in milliseconds.
        uint32 ms = 5;
    }

    double time = 1;
    repeated ServicePing list = 2;
}

// Rate at which the interop server receives telemetry.
message InteropUploadRate {
    double time = 1;
    // Total rates over 1 and 5 seconds without filtering.
    double total_1 = 2;
    double total_5 = 3;
    // Rates over 1 and 5 seconds of unique telemetry.
    double fresh_1 = 4;
    double fresh_5 = 5;
}

// Rate at which images are being captured / synced.
message ImageCaptureRate {
    double time = 1;
    // Rate over 5 seconds.
    double rate_5 = 2;
}
